--- a/rr_lib/build.gradle
+++ b/rr_lib/build.gradle
@@ -2,13 +2,10 @@ apply plugin: 'com.android.library'
 
 
 android {
-    compileSdkVersion 26
-
-
-
+    compileSdkVersion 30
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 26
+        minSdkVersion 16
+        targetSdkVersion 30
         versionCode 1200
         versionName "1.2.0"
 
@@ -28,12 +25,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
 
 
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
@@ -49,87 +42,87 @@ dependencies {
 
 
 
-
-
-apply plugin: 'com.github.dcendents.android-maven'
-apply plugin: 'com.jfrog.bintray'
-
-def siteUrl = 'https://github.com/dashugege/Ilib.git'      // 项目的主页   这个是说明，可随便填
-def gitUrl = 'https://github.com/dashugege/Ilib.git'      // Git仓库的url  这个是说明，可随便填
-group = "com.common.rrlib"    // 这里是groupId ,必须填写  一般填你唯一的包名，对应com.squareup.okhttp3:okhttp:3.4.1中的com.squareup.okhttp3部分
-// 版本号，下次更新是只需要更改版本号即可
-version = "1.2.0"
-
-install {
-    repositories.mavenInstaller {
-        // This generates POM.xml with proper parameters
-        pom {
-            project {
-                packaging 'aar'
-                // Add your description here
-                name 'Ilib'     //项目描述
-                url siteUrl
-                // Set your license
-                licenses {
-                    license {
-                        name 'The Ilib Software License, Version 1.2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    }
-                }
-                developers {
-                    developer {
-                        id 'xiaomu'        //填写开发者的一些基本信息
-                        name 'xiaomu'    //填写开发者的一些基本信息
-                        email 'hongjiang1018@icloud.com'   //填写开发者的一些基本信息
-                    }
-                }
-                scm {
-                    connection gitUrl
-                    developerConnection gitUrl
-                    url siteUrl
-                }
-            }
-        }
-    }
-}
-task sourcesJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
-}
-task javadoc(type: Javadoc) {
-    options {
-        encoding "UTF-8"
-        charSet 'UTF-8'
-        options.author true
-        options.version true
-        links "http://docs.oracle.com/javase/7/docs/api"
-    }
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-}
-task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
-    from javadoc.destinationDir
-}
-artifacts {
-    archives javadocJar
-    archives sourcesJar
-}
-
-Properties properties = new Properties()
-properties.load(project.file('local.properties').newDataInputStream())
-bintray {
-//    userOrg=properties.getProperty("bintray.user")
-    user = "xiaomu" // properties.getProperty("bintray.user")    //读取 local.properties 文件里面的 bintray.user
-    key = "20d2e160bc50a658ef8c62a274b25c2ed041edde1" //properties.getProperty("bintray.apikey")   //读取 local.properties 文件里面的 bintray.apikey
-    configurations = ['archives']
-    pkg {
-        repo = "maven"
-        name = "Ilib"    //发布到JCenter上的项目名字，必须填写，对应com.squareup.okhttp3:okhttp:3.4.1中的okhttp
-//        publishVersion = '1.1.0'  //发布到JCenter上的项目版本号
-        websiteUrl = siteUrl
-        vcsUrl = gitUrl
-        licenses = ["Apache-2.0"]
-        publish = true
-    }
-}
+//
+//
+//apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.jfrog.bintray'
+//
+//def siteUrl = 'https://github.com/dashugege/Ilib.git'      // 项目的主页   这个是说明，可随便填
+//def gitUrl = 'https://github.com/dashugege/Ilib.git'      // Git仓库的url  这个是说明，可随便填
+//group = "com.common.rrlib"    // 这里是groupId ,必须填写  一般填你唯一的包名，对应com.squareup.okhttp3:okhttp:3.4.1中的com.squareup.okhttp3部分
+//// 版本号，下次更新是只需要更改版本号即可
+//version = "1.2.0"
+//
+//install {
+//    repositories.mavenInstaller {
+//        // This generates POM.xml with proper parameters
+//        pom {
+//            project {
+//                packaging 'aar'
+//                // Add your description here
+//                name 'Ilib'     //项目描述
+//                url siteUrl
+//                // Set your license
+//                licenses {
+//                    license {
+//                        name 'The Ilib Software License, Version 1.2.0'
+//                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+//                    }
+//                }
+//                developers {
+//                    developer {
+//                        id 'xiaomu'        //填写开发者的一些基本信息
+//                        name 'xiaomu'    //填写开发者的一些基本信息
+//                        email 'hongjiang1018@icloud.com'   //填写开发者的一些基本信息
+//                    }
+//                }
+//                scm {
+//                    connection gitUrl
+//                    developerConnection gitUrl
+//                    url siteUrl
+//                }
+//            }
+//        }
+//    }
+//}
+//task sourcesJar(type: Jar) {
+//    from android.sourceSets.main.java.srcDirs
+//    classifier = 'sources'
+//}
+//task javadoc(type: Javadoc) {
+//    options {
+//        encoding "UTF-8"
+//        charSet 'UTF-8'
+//        options.author true
+//        options.version true
+//        links "http://docs.oracle.com/javase/7/docs/api"
+//    }
+//    source = android.sourceSets.main.java.srcDirs
+//    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+//}
+//task javadocJar(type: Jar, dependsOn: javadoc) {
+//    classifier = 'javadoc'
+//    from javadoc.destinationDir
+//}
+//artifacts {
+//    archives javadocJar
+//    archives sourcesJar
+//}
+//
+//Properties properties = new Properties()
+//properties.load(project.file('local.properties').newDataInputStream())
+//bintray {
+////    userOrg=properties.getProperty("bintray.user")
+//    user = "xiaomu" // properties.getProperty("bintray.user")    //读取 local.properties 文件里面的 bintray.user
+//    key = "20d2e160bc50a658ef8c62a274b25c2ed041edde1" //properties.getProperty("bintray.apikey")   //读取 local.properties 文件里面的 bintray.apikey
+//    configurations = ['archives']
+//    pkg {
+//        repo = "maven"
+//        name = "Ilib"    //发布到JCenter上的项目名字，必须填写，对应com.squareup.okhttp3:okhttp:3.4.1中的okhttp
+////        publishVersion = '1.1.0'  //发布到JCenter上的项目版本号
+//        websiteUrl = siteUrl
+//        vcsUrl = gitUrl
+//        licenses = ["Apache-2.0"]
+//        publish = true
+//    }
+//}
